--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -12,3 +12,6 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Solo Administradores', users_path %></li>
 <% end %>
+<% if user_signed_in? %>
+  <li><%= link_to 'Crar un nuevo Proyecto', new_portafolio_path %></li>
+<% end %>
