--- a/app/views/portafolios/show.html.erb
+++ b/app/views/portafolios/show.html.erb
@@ -11,10 +11,11 @@
 
 <p>
   <strong>User:</strong>
-  <%= @portafolio.user.name %>
+  <%= link_to @portafolio.user.name, controller: "users", action: "show", id: @portafolio.user.id %>
 </p>
 <% if current_user === @user %>
 	<%= link_to 'Edit', edit_portafolio_path(@portafolio) %> |
 <% end %>
 
-<%= link_to 'Back', portafolios_path %>
+<%= link_to 'Back'%>
+<%= @usersss %>
