Revert "edite home"
This reverts commit 36df800ad3792bb5342aabebbc57b332ad917c40.

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -13,5 +13,5 @@
   <li><%= link_to 'Solo Administradores', users_path %></li>
 <% end %>
 <% if user_signed_in? %>
-  <li><%= link_to 'Crar un nuevo Proyecto' %></li>
+  <li><%= link_to 'Crar un nuevo Proyecto', new_portafolio_path %></li>
 <% end %>
