--- a/app/views/portafolios/show.html.erb
+++ b/app/views/portafolios/show.html.erb
@@ -13,6 +13,9 @@
   <strong>User:</strong>
   <%= link_to @portafolio.user.name, controller: "users", action: "show", id: @portafolio.user.id %>
 </p>
+<p>
+	<%= @portafolio.impressionist_count(:filter=>:session_hash) %>
+</p>
 <% if current_user === @user %>
 	<%= link_to 'Edit', edit_portafolio_path(@portafolio) %> |
 <% end %>
