Tengo un bug en controlador destroy

--- a/app/views/portafolios/show.html.erb
+++ b/app/views/portafolios/show.html.erb
@@ -20,5 +20,5 @@
 	<%= link_to 'Edit', edit_portafolio_path(@portafolio) %> |
 <% end %>
 
-<%= link_to 'Back'%>
+<%= link_to 'Portafolio ', user_portafolios_path(@portafolio.user_id) %>
 <%= @usersss %>
