--- a/app/views/portafolios/index.html.erb
+++ b/app/views/portafolios/index.html.erb
@@ -17,9 +17,9 @@
         <td><%= portafolio.titulo %></td>
         <td><%= portafolio.descripcion %></td>
         <td><%= link_to portafolio.user.name, controller: "users", action: "show", id: portafolio.user.id %></td>
-        <td><%= link_to 'Show', portafolio %></td>
-        <td><%= link_to('Edit', edit_portafolio_path(portafolio)) if current_user.id == portafolio.user_id  %></td>
-        <td><%= link_to('Destroy', portafolio, method: :delete, data: { confirm: '¿Estas seguro que quieres eliminar este Proyecto?' }) if current_user.id == portafolio.user_id %></td>
+        <td><%= link_to 'Show', user_portafolio_path(portafolio.user_id,portafolio) %></td>
+        <td><%= link_to('Edit', edit_user_portafolio_path(portafolio.user_id,portafolio)) if current_user.id == portafolio.user_id  %></td>
+        <td><%= link_to('Destroy', user_portafolio_path(portafolio.user_id,portafolio), method: :delete, data: { confirm: '¿Estas seguro que quieres eliminar este Proyecto?' }) if current_user.id == portafolio.user_id %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Portafolio', new_portafolio_path %>
+<%= link_to 'New Portafolio', new_user_portafolio_path %>
