de otra manera desplegar los portafolios

--- a/app/views/portafolios/_form.html.erb
+++ b/app/views/portafolios/_form.html.erb
@@ -1,5 +1,5 @@
 <%= current_user.name %>
-<%= simple_form_for(@portafolio) do |f| %>
+<%= simple_form_for[@user,@portafolio] do |f| %>
 
   <%= f.error_notification %>
   <div class="form-inputs">
