--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -15,3 +15,7 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Crar un nuevo Proyecto' %></li>
 <% end %>
+<% if user_signed_in? %>
+  <li><%= link_to 'Edit perfil', perfil_path(current_user) %></li>
+<% end %>
+
