--- a/app/views/portafolios/show.html.erb
+++ b/app/views/portafolios/show.html.erb
@@ -16,7 +16,18 @@
 <p>
 	<%= @portafolio.impressionist_count(:filter=>:session_hash) %>
 </p>
+
+<%= simple_form_for current_user([@portafolio, @coment]) do |f| %>
+  <%= f.error_notification %>
+  <div class="form-inputs">
+    <%= f.input :comment %>
+  </div>
+  <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
+<% end %>
+
 <% if current_user === @user %>
 	<%= link_to 'Edit', edit_portafolio_path(@portafolio) %> |
 <% end %>
-<%= link_to 'Portafolio ', user_portafolios_path(@portafolio.user_id) %>
+<%= link_to 'Portafolio ', user_path(@portafolio.user_id) %>
