--- a/app/views/portafolios/show.html.erb
+++ b/app/views/portafolios/show.html.erb
@@ -17,9 +17,12 @@
 	<%= @portafolio.impressionist_count(:filter=>:session_hash) %>
 </p>
 
+<!-- desplegar comentarios -->
+
+
+
 <%= simple_form_for ([@user, @portafolio, @portafolio.comentarios.new ]) do |f|%>
-	<%= f.label :body %>
-	<%= f.text_field :body %>
+	<%= f.input :body, as: :text  %> 
 	<%= f.submit 'Comentar', :class => 'button right' %>
 <% end %>
 
